Handle reread shelf when create manga BE
